[package]
name = "no_color"
description = "Detect NO_COLOR environment variable."
version = "0.2.0"
authors = ["sitkevij"]
license = "MIT"
categories = ["command-line-interface"]
edition = "2021"
keywords = ["cli", "terminal", "no_color", "color"]
readme = "README.md"
repository = "https://github.com/sitkevij/no_color"
include = ["src/**/*", "examples/**/*", "Cargo.toml", "Cargo.lock", "README.md"]

[dev-dependencies]
rusty-hook = "^0.11.2"
